--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,85 @@
     margin: 0;
     font-family: 'Open Sans', sans-serif;
 }
+html, body {
+    background-color: #000;
+}
+input:focus {
+    outline: none;
+}
+.header{
+    display: flex;
+    align-items: center;
+    background-color: #FF8400;
+    height: 80px;
+}
+.header h1{
+    font-size: 36px;
+    font-weight: 700;
+}
+.nav-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 0 20px;
+    color:#ffffff;
+}
+.contact-link{
+    cursor: pointer;
+    font-weight: 400;
+}
+.form-container{
+    width: 100%;
+    max-width: 600px;
+    margin: 40px auto;
+    border-radius: 8px;
+    background-color: #333333;
+    padding: 20px 20px;
+}
+.newAdress{
+    display: flex;
+    margin: 50px;
+}
+.form-container label{
+    display: none;
+}
+.form-container input{
+    width: 100%;
+    height:50px;
+    border-radius: 4px;
+    border: none;
+    padding: 16px 20px;
+}
+.form-control{
+    margin-bottom: 20px;
+}
+.form-input::placeholder {
+    color: #C9C9C9;
+}
+.form-input:disabled {
+    background-color: #ddd;
+}
+.btn-container{
+    display: flex;
+    justify-content: space-between;
+}
+.btn {
+    width: 250px;
+    height: 50px;
+    background-color: #ff8400;
+    border: 0;
+    border-radius: 4px;
+    color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+}
+.btn-left {
+    margin-right: 10px;
+}
+
+.btn-right {
+    margin-left: 10px;
+}
