--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ input:focus {
     height: 80px;
 }
 .header h1{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-weight: 700;
 }
 .nav-container{
@@ -85,4 +85,46 @@ input:focus {
 
 .btn-right {
     margin-left: 10px;
+}
+.list-items {
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: #333333;
+    border-radius: 8px;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+.list-items h3{
+    font-weight: 700;
+    font-size: 1.12rem;
+    color: #ff8400;
+}
+.street-line{
+    color: #ffffff;
+}
+.address-cep{
+    color: #8F8F8F;
+}
+.social-media-container{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+    flex-flow: wrap;
+}
+.social-media{
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #333333;
+    margin-bottom: 10px;
+    border: 1px solid #000000;
+}
+.social-media img{
+    display: block;
+
+}
+.social-media:hover{
+    border: 1px solid #ff8400;
 }
